# loja

./: Application.hs  Cliente.hs  Fornecedor.hs  Foundation.hs  Main.hs  Pedido.hs  PedidoProduto.hs  Produto.hs  README.md  routes  sapatilha.cabal
Handler/: Cliente.hs  Fornecedor.hs  Login.hs  Pedido.hs  PedidoProduto.hs  Produto.hs  Venda.hs
Templates/: addClientes.hamlet  addFornecedores.hamlet  addProdutos.hamlet  addVendas.hamlet  form.hamlet  index.hamlet  listaClientes.hamlet  listaFornecedores.hamlet  listaProdutos.hamlet  login.hamlet  perfilClientes.hamlet  sucessoCliente.hamlet  sucessoFornecedor.hamlet  sucessoProduto.hamlet
