name:               sapatilha
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          sapatilha
  main-is:          Main.hs
  other-modules:    Foundation
                    Application
                    Cliente
                    Produto
                    Fornecedor
                    Pedido
                    PedidoProduto
                    
                    
  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod
                , yesod-core
                , text                          
                , persistent                    
                , persistent-postgresql
                , aeson
                , monad-logger
                , time

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
